--- a/src/Diamante/FrontBundle/Resources/assets/less/variables.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/variables.less
@@ -3,8 +3,13 @@
 @fa-font-path: "../js/vendor/fontawesome/fonts/";
 
 @main-gutter: 40px;
-@header-height: 111px;
+@header-height: 110px;
+@header-mobile-height: 80px;
 @footer-height: 60px;
+
+// Colors
+@brand-primary: #446e78;
+@text-color: #000;
 
 // Buttons
 @btn-font-weight: 500;
@@ -21,6 +26,9 @@
 @modal-backdrop-opacity: .9;
 @modal-content-bg: none;
 @modal-label-color: #949696;
+
+// Tables
+@table-border-color: #e6e6e6;
 
 //Footer
 @footer-color: #fff;
