--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Ticket/templates/list-item.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Ticket/templates/list-item.ejs
@@ -1,5 +1,5 @@
-<td class="key"><a href="#tickets/<%= key %>"><%= key %></a></td>
-<td class="createdAt"><a href="#tickets/<%= key %>"><%= created %></a></td>
-<td class="subject"><a href="#tickets/<%= key %>"><%= subject %></a></td>
-<td class="priority"><a href="#tickets/<%= key %>"><%= priority %></a></td>
-<td class="status"><a href="#tickets/<%= key %>"><%= status %></a></td>
+<td class="key sortable"><a href="#tickets/<%= key %>"><%= key %></a></td>
+<td class="createdAt sortable"><a href="#tickets/<%= key %>"><%= created %></a></td>
+<td class="subject sortable"><a href="#tickets/<%= key %>"><%= subject %></a></td>
+<td class="priority sortable"><a href="#tickets/<%= key %>"><%= priority %></a></td>
+<td class="status sortable"><a href="#tickets/<%= key %>"><%= status %></a></td>
